--- a/materials/cs6_practical_power-analysis.qmd
+++ b/materials/cs6_practical_power-analysis.qmd
@@ -42,7 +42,7 @@ np.seterr(all='ignore')
 ## Click to expand
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ### Libraries
 
@@ -60,7 +60,7 @@ library(rstatix)
 
 ### Functions
 
-## R
+## R (base)
 
 ### Libraries
 ### Functions
@@ -162,7 +162,7 @@ We first need to think about which test we would use to analyse the data. Here w
 The first thing we need to do is figure out what a "medium" effect size is. In absence of any further information we refer back to Cohen's effect sizes.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 We're using the `pwr` library, so make sure that you have installed and loaded it with the following commands:
 
@@ -192,7 +192,7 @@ This function just returns the default conventional values for effect sizes as d
 
 The bit we want is on the bottom line; we apparently want an effect size of 0.5.
 
-## R
+## R (base)
 
 We're using the `pwr` library, so make sure that you have installed and loaded it with the following commands:
 
@@ -232,7 +232,7 @@ For this sort of study effect size is measured in terms of Cohen’s d statistic
 ### Calculating sample sizes
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 We do this as follows:
 
@@ -254,7 +254,7 @@ The other four arguments are what is used in the power analysis:
 * `power`; is the power
 * `n`; this is the number of observations per sample.
 
-## R
+## R (base)
 
 We do this as follows:
 
@@ -311,14 +311,14 @@ We can use the function to answer a different question:
 Let's see how we do this:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 pwr.t.test(n = 30, sig.level = 0.05, power = 0.8,
            type = "two.sample", alternative = "two.sided")
 ```
 
-## R
+## R (base)
 
 ```{r}
 pwr.t.test(n = 30, sig.level = 0.05, power = 0.8,
@@ -347,7 +347,7 @@ Let’s look again at the `fishlength` data we saw in the first practical relati
 This is saved as `data/CS1-twosample.csv`.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 #| message: false
@@ -369,7 +369,7 @@ t.test(length ~ river,
        var.equal = TRUE)
 ```
 
-## R
+## R (base)
 
 ```{r}
 #| message: false
@@ -425,7 +425,7 @@ Can we use this information to design a more efficient experiment? One that we w
 Let’s first work out exactly what the effect size of this previous study really was by estimating Cohen’s d using this data.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 To this, we use the `cohens_d` function from the `rstatix` package:
 
@@ -444,7 +444,7 @@ pwr.t.test(d = 0.94, power = 0.8, sig.level = 0.05,
            type = "two.sample", alternative = "two.sided")
 ```
 
-## R
+## R (base)
 
 To this, we use the `cohens_d` function from the `rstatix` package:
 
@@ -508,7 +508,7 @@ d. How would the sample size change if we wanted 0.9 power and significance 0.01
 ::: {.callout-tip collapse="true"}
 ## Answer
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 First, read in the data:
 
@@ -526,7 +526,7 @@ t.test(length ~ 1,
        data = fish_data)
 ```
 
-## R
+## R (base)
 
 First, read in the data:
 
@@ -566,7 +566,7 @@ There does appear to be a statistically significant result here; the mean length
 Let's calculate the effect size using these data. This gives us the following output for the effect size in terms of the Cohen's d metric.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 cohens_d(length ~ 1,
@@ -574,7 +574,7 @@ cohens_d(length ~ 1,
          data = fish_data)
 ```
 
-## R
+## R (base)
 
 ```{r}
 cohens_d(length ~ 1,
@@ -601,14 +601,14 @@ Although the effect size here is negative, it does not matter in terms of the po
 So, let's do the power analysis to actually calculate the minimum sample size required:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 pwr.t.test(d = -0.6590669, sig.level = 0.05, power = 0.8,
            type = "one.sample")
 ```
 
-## R
+## R (base)
 
 ```{r}
 pwr.t.test(d = -0.6590669, sig.level = 0.05, power = 0.8,
@@ -629,14 +629,14 @@ pg.power_ttest(d = -0.6590669,
 We would need 21 (you round up the n value) observations in our experimental protocol in order to be able to detect an effect size this big (small?) at a 5% significance level and 80% power. Let's see what would happen if we wanted to be even more stringent and calculate this at a significance level of 1%:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 pwr.t.test(d = -0.6590669, sig.level = 0.01, power = 0.9,
            type = "one.sample")
 ```
 
-## R
+## R (base)
 
 ```{r}
 pwr.t.test(d = -0.6590669, sig.level = 0.01, power = 0.9,
@@ -670,7 +670,7 @@ c. If you were to repeat the study in the future, how many observations would be
 ::: {.callout-tip collapse="true"}
 ## Answer
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 First, read in the data:
 
@@ -679,7 +679,7 @@ First, read in the data:
 cortisol <- read_csv("data/CS1-twopaired.csv")
 ```
 
-## R
+## R (base)
 
 ```{r}
 #| message: false
@@ -696,14 +696,14 @@ cortisol_py = pd.read_csv("data/CS1-twopaired.csv")
 We have a paired data set with 20 pairs of observations, what sort of effect size could we detect at a significance level of 0.05 and power of 0.8?
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 pwr.t.test(n = 20, sig.level = 0.05, power = 0.8,
            type = "paired")
 ```
 
-## R
+## R (base)
 
 ```{r}
 pwr.t.test(n = 20, sig.level = 0.05, power = 0.8,
@@ -726,7 +726,7 @@ Remember that we get effect size measured in Cohen's d metric. So here this expe
 Now let's look at the actual data and work out what the effect size actually is.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 cohens_d(cortisol ~ time,
@@ -734,7 +734,7 @@ cohens_d(cortisol ~ time,
          data = cortisol)
 ```
 
-## R
+## R (base)
 
 ```{r}
 cohens_d(cortisol ~ time,
@@ -764,7 +764,7 @@ pg.compute_effsize(x = cortisol_wide_py.evening,
 This value is a massive effect size. It's quite likely that we actually have more participants in this study than we actually need given such a large effect. Let calculate how many individuals we would actually need:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 pwr.t.test(d = -1.159019, sig.level = 0.01, power = 0.8,
@@ -773,7 +773,7 @@ pwr.t.test(d = -1.159019, sig.level = 0.01, power = 0.8,
 
 So we would have only needed 13 pairs of participants in this study given the size of effect we were trying to detect.
 
-## R
+## R (base)
 
 ```{r}
 pwr.t.test(d = -1.159019, sig.level = 0.01, power = 0.8,
@@ -806,7 +806,7 @@ Let's read in `data/CS2-lobsters.csv`. This data set was used in an earlier prac
 As a quick reminder we'll also plot the data and perform an ANOVA:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 #| message: false
@@ -830,7 +830,7 @@ lm_lobster <- lm(weight ~ diet,
 anova(lm_lobster)
 ```
 
-## R
+## R (base)
 
 ```{r}
 # read in the data
@@ -890,7 +890,7 @@ So the question we can ask is:
 First let’s calculate the observed effect size from this study.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 For linear models the effect size is called Cohen’s $f^2$. We can calculate it easily by using the $R^2$ value from the model fit and shoving it in the following formula:
 
@@ -914,7 +914,7 @@ R2 / (1 - R2)
 
 So now we've got Cohen's $f^2$. 
 
-## R
+## R (base)
 
 For linear models the effect size is called Cohen’s $f^2$. We can calculate it easily by using the $R^2$ value from the model fit and shoving it in the following formula:
 
@@ -954,7 +954,7 @@ R2 = lm_lobsters_py.rsquared
 
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 There’s one more thing that we need for the power calculation for a linear model; the degrees of freedom.
 
@@ -1000,7 +1000,7 @@ The most challenging part for using power analyses for linear models is working 
 |ANCOVA with interaction| 2 x no. of groups – 1 |
 |ANCOVA without interaction| no. of groups |
 
-## R
+## R (base)
 
 There’s one more thing that we need for the power calculation for a linear model; the degrees of freedom.
 
@@ -1088,7 +1088,7 @@ Find the effect size from this study and perform a power calculation (at 0.8 and
 Let's first load in the data and have a look at them.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 #| message: false
@@ -1101,7 +1101,7 @@ ggplot(mussels, aes(x = location,
     geom_boxplot()
 ```
 
-## R
+## R (base)
 
 ```{r}
 mussels_r <- read.csv("data/CS6-shelllength.csv")
@@ -1132,7 +1132,7 @@ So we are effectively looking at a one-way ANOVA with five groups. This will be 
 Now we fit a linear model, and perform our calculations:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 # define the model
@@ -1168,7 +1168,7 @@ pwr.f2.test(u = 4, f2 = 0.837767,
 
 This tells us that the denominator degrees of freedom should be `r round(pwr.f2.test(u = 4, f2 = 0.837767, sig.level = 0.05 , power = 0.8)[[2]])` (`r round(pwr.f2.test(u = 4, f2 = 0.837767, sig.level = 0.05 , power = 0.8)[[2]], digits = 2)` rounded up), and this means that we would only need 20 observations in total across all five groups to detect this effect size (Remember: number of observations = numerator d.f. + denominator d.f. + 1)
 
-## R
+## R (base)
 
 
 ```{r}
@@ -1267,7 +1267,7 @@ b. If there would be a relationship that large between age and seizure rate how 
 Let's first load in the data and have a look at them.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 Let's load in the data:
 
@@ -1284,7 +1284,7 @@ ggplot(data = epilepsy,
   geom_point()
 ```
 
-## R
+## R (base)
 
 Let's load in the data:
 
@@ -1322,7 +1322,7 @@ So we are effectively looking at a simple linear regression here.
 Now we fit a linear model and determine the number of samples for the observed effect size at 90% power:
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 # define the model
@@ -1355,7 +1355,7 @@ pwr.f2.test(u = 1, f2 = f2,
 
 This tells us that the denominator degrees of freedom (`v`) should be `r ceiling(pwr.f2.test(u = 1, f2 = f2, sig.level = 0.05, power = 0.9)[[2]])` (rounded up to the nearest number), and this means that we would need 11496 participants to detect this effect size (Remember: number of observations = numerator d.f. (`u`) + denominator d.f. (`v`) + 1). 
 
-## R
+## R (base)
 
 ```{r}
 # define the model
@@ -1496,14 +1496,14 @@ Rather boring that all of them were 1 to be honest. Anyway, given that the denom
 We now have all of the information to carry out the power analysis.
 
 ::: {.panel-tabset group="language"}
-## tidyverse
+## R (tidyverse)
 
 ```{r}
 pwr.f2.test(u = 6, f2 = 0.15,
             sig.level = 0.05, power = 0.9)
 ```
 
-## R
+## R (base)
 
 ```{r}
 pwr.f2.test(u = 6, f2 = 0.15,
